@@ -13,6 +13,7 @@
 		"retweet_count" : 12,
 		"created_at" : "Tue Jul 13 17:38:21 +0000 2010",
 		"retweeted" : true,
+		"favorited" : true,
 		"entities": {
 			"hashtags": [
 			{
