@@ -7,6 +7,7 @@
 		 "id":12345,   
 		 "iso_language_code":"en",
 	 	 "in_reply_to_status_id" : 123123123123,
+	 	 "favorited" : true,
 	 	 "user" : {
 		      "id" : 112233,
 		      "screen_name" : "habuma",
@@ -66,6 +67,7 @@
 		 "id":54321,   
 		 "iso_language_code":"de",
 		 "source":"Twitter",
+	 	 "favorited" : false,
 		"entities": {
 			"hashtags": [], 
 			"urls": [], 
